github
- mayhem:
  - Make updater's settings dynamic
  - Multi-line quoting
  - New Unread Count reset keybind
  - fix remember updater's interval settings
  - fix wrong keybind input in options
  - fix time preview
  - fix backlink inlining removing its container

2.16.1
- mayhem:
  - fix updater's custom settings

2.16.0
- mayhem:
  - Thread Stats performance fix, especially on long threads
  - Sauce performance improvement
  - fix Quote Inlining for a pattern
  - other minor performance improvements and bug fixes
- aeosynth:
  - fix an upgrading problem (1.x -> 2.x)
  - fix minor bugs with auto-posting
  - add updater scrolling
  - enable auto-updating by default
  - alphabetize option groups

2.15.1
- mayhem:
  - prevent upload of too large files
  - fix options height for netbooks
  - /a/ is now archived on easymodo

2.15.0
- mayhem:
  - custom hotkey binding
  - image spoiler revealer
  - optional auto noko
  - add a class for reply stubs
  - fix options centering on Opera
  - fix append '#watch' only when auto watch is enabled
  - fix cooldown with the normal post form
  - fix `Select next reply` hotkey behaviour
- aeosynth:
  - keep options dialog at constant size
  - drop firefox 3.6 support (again...)
  - comment out tineye
  - trying to post during cooldown will enable auto-post
  - fix errors w/ noscript

2.14.0
- mayhem:
  - firstrun dialog
  - fix backlinking future posts
  - fix op non-backlinking
  - fix thread expansion on /t/
  - fix sage cooldown
  - fix extra link area around images
  - fix persistent qr
- aeosynth:
  - reply navigation
  - fix time formatting of xhr posts
  - fix %P time formatting

2.13.0
- mayhem:
  - fix various bugs
  - keybinds: 0: actually refresh page 0
  - auto posting
  - add google sauce
- arbitrary time formatting
- rewrite options dialog, lightboxing
- various fixes

2.12.0
- revert the status bar blocking changes
- add a 5px padding-bottom to #qp

2.11.4
- fix another quoting bug

2.11.3
- really fix quoting
